@@ -351,7 +351,6 @@ GEN     FlxqX_mul(GEN x, GEN y, GEN T, ulong p);
 GEN     FlxqX_normalize(GEN z, GEN T, ulong p);
 GEN     FlxqX_pow(GEN V, long n, GEN T, ulong p);
 GEN     FlxqX_red(GEN z, GEN T, ulong p);
-GEN     FlxqX_rem_Barrett(GEN x, GEN mg, GEN T, GEN Q, ulong p);
 GEN     FlxqX_safegcd(GEN P, GEN Q, GEN T, ulong p);
 GEN     FlxqX_sqr(GEN x, GEN T, ulong p);
 GEN     FlxqXQ_div(GEN x, GEN y, GEN S, GEN T, ulong p);
@@ -614,6 +613,7 @@ GEN     FpXQX_digits(GEN x, GEN B, GEN T, GEN p);
 GEN     FpXQX_extgcd(GEN x, GEN y, GEN T, GEN p, GEN *ptu, GEN *ptv);
 GEN     FpXQX_fromdigits(GEN x, GEN B, GEN T, GEN p);
 GEN     FpXQX_gcd(GEN P, GEN Q, GEN T, GEN p);
+GEN     FpXQX_get_red(GEN S, GEN T, GEN p);
 GEN     FpXQX_invBarrett(GEN S, GEN T, GEN p);
 GEN     FpXQX_mul(GEN x, GEN y, GEN T, GEN p);
 GEN     FpXQX_powu(GEN x, ulong n, GEN T, GEN p);
@@ -648,6 +648,9 @@ GEN     Kronecker_to_FpXQX(GEN z, GEN pol, GEN p);
 GEN     Kronecker_to_ZXX(GEN z, long N, long v);
 GEN     ZXX_mul_Kronecker(GEN x, GEN y, long n);
 GEN     ZXX_sqr_Kronecker(GEN x, long n);
+long    get_FpXQX_degree(GEN T);
+GEN     get_FpXQX_mod(GEN T);
+long    get_FpXQX_var(GEN T);
 GEN     random_FpXQX(long d1, long v, GEN T, GEN p);
 
 /* FpV.c */
@@ -4465,6 +4468,7 @@ INLINE GEN    FqX_div_by_X_x(GEN x, GEN y, GEN T, GEN p, GEN *z);
 INLINE GEN    FqX_divrem(GEN x, GEN y, GEN T, GEN p, GEN *z);
 INLINE GEN    FqX_extgcd(GEN P,GEN Q,GEN T,GEN p, GEN *U, GEN *V);
 INLINE GEN    FqX_gcd(GEN P, GEN Q, GEN T, GEN p);
+INLINE GEN    FqX_get_red(GEN S, GEN T, GEN p);
 INLINE GEN    FqX_mul(GEN x, GEN y, GEN T, GEN p);
 INLINE GEN    FqX_mulu(GEN x, ulong y, GEN T, GEN p);
 INLINE GEN    FqX_neg(GEN x, GEN T, GEN p);
