@@ -366,6 +366,8 @@ BA132- [libpari] idealramfrobenius, idealfrobenius_aut, nfgaloispermtobasis
        same for bnrisconductor, bnrdisc and bnrclassno
   137- [libpari] real_1_bit(), grootsof1()
 PB138- [libpari] Flm_sub, FpM_sub
+BA138- [libpari] get_FpXQX_mod, get_FpXQX_degree, get_FpXQX_var,
+       FpXQX_get_red, FqX_get_red, random_FpXQX
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
@@ -492,3 +494,4 @@ BA 7- divide_conquer_prod: use gen_product instead
         lfun(L, s)
       as an analog to zetak(). Or directly lfun(x^2+1, s) if a single value
       is needed. [#368, #1647]
+BA10- [libpari] FpXQX_rem_Barrett: use FpXQX_get_red
